MVP-002 - Fixes slow icon download and layout issues on the nav actions buttons.

--- a/site/pages/resources/styles/styles.scss
+++ b/site/pages/resources/styles/styles.scss
@@ -209,6 +209,11 @@ footer {
     align-items: center;
     padding: 32px 48px;
 
+    .nav-actions {
+        display: none;
+        align-items: center;    
+    }
+
     .nav-logo {
         z-index: 200;
         height: 20px;
@@ -642,6 +647,10 @@ article {
         }
     }
 
+    nav .nav-actions {
+        display: flex;  
+    }
+
     nav .nav-search {
         width: 60vw;
     }
@@ -656,13 +665,32 @@ article {
 }
 
 @media only screen and (max-width: 600px) {
+    nav, footer {
+        padding: 32px 24px;
+    }
+
     nav {
         .search-box {
             display: flex;
+            margin-right: 16px;
         }
 
         .nav-search .search-container {
             display: none;
+        }
+
+        .nav-search .nav-logo {
+            margin-left: 16px;
+        }
+    }
+
+    footer .footer-logo {
+        flex-direction: column;
+        align-items: start;
+        margin-left: 16px;
+
+        .nav-logo {
+            margin-top: 16px;
         }
     }
 }
